--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@
 body,
 html {
   margin: 0;
+  overflow-x: hidden;
 }
 
 body {
   height: 100%;
   font-family: "Montserrat", sans-serif;
+  overflow: hidden;
 }
 
 header {
@@ -67,8 +69,8 @@ header nav ul li a {
 }
 .wrapper section .primary {
   color: white;
-  padding: 1.5em 1.9em 1.5em calc(0.7em + 10px);
-  background-position: 10.5em;
+  padding: 1.5em 1.9em 1.5em calc(0.7em + 15px);
+  background-position: 10.7em;
   background-size: 1em;
   border: 1px solid white;
   display: inline-block;
@@ -166,6 +168,49 @@ header nav ul li a {
   html {
     font-size: 23px;
   }
+}
+section.product-hero-wrapper {
+  color: black;
+  padding-top: 8em;
+}
+section.product-hero-wrapper p {
+  width: 60%;
+  font-size: 1.3rem;
+  margin-bottom: 0;
+}
+section.product-hero-wrapper h1 {
+  font-size: 2.4rem;
+}
+section.product-hero-wrapper .product-grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-row-gap: 5rem;
+}
+section.product-hero-wrapper .product-grid-container .product-grid-item .product-image-wrapper {
+  text-align: center;
+}
+section.product-hero-wrapper .product-grid-container .product-grid-item .product-image-wrapper .product-image {
+  height: 30vh;
+  padding-bottom: 20px;
+}
+section.product-hero-wrapper .product-grid-container .product-grid-item h2 {
+  text-align: center;
+}
+section.product-hero-wrapper .product-grid-container .product-grid-item p {
+  padding: 5px;
+  text-align: center;
+  margin: auto;
+}
+section.product-hero-wrapper .product-button-container {
+  padding-top: 1rem;
+}
+section.product-hero-wrapper button {
+  padding: 1em !important;
+  width: 100%;
+  background: black;
+  color: white;
+  border: none;
+  font-family: Montserrat, sans-serif;
 }
 
 /*# sourceMappingURL=styles.css.map */
