--- a/styles.scss
+++ b/styles.scss
@@ -7,11 +7,13 @@ $submit-btn-color: white;
 body,
 html {
   margin: 0;
+  overflow-x: hidden;
 }
 
 body {
   height: 100%;
   font-family: "Montserrat", sans-serif;
+  overflow: hidden;
   //display: none;
 }
 
@@ -71,8 +73,8 @@ header {
     }
     .primary {
       color: white;
-      padding: 1.5em 1.9em 1.5em calc(0.7em + 10px);
-      background-position: 10.5em;
+      padding: 1.5em 1.9em 1.5em calc(0.7em + 15px);
+      background-position: 10.7em;
       background-size: 1em;
       border: 1px solid white;
       display: inline-block;
@@ -173,5 +175,52 @@ header {
 @media only screen and (min-width: 1800px) {
   html {
     font-size: 23px;
+  }
+}
+
+//Product Page
+section.product-hero-wrapper {
+  color: black;
+  padding-top: 8em;
+  p {
+    width: 60%;
+    font-size: 1.3rem;
+    margin-bottom: 0;
+  }
+  h1 {
+    font-size: 2.4rem;
+  }
+  .product-grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-row-gap: 5rem;
+    .product-grid-item {
+      .product-image-wrapper {
+        text-align: center;
+        .product-image {
+          height: 30vh;
+          padding-bottom: 20px;
+        }
+      }
+      h2 {
+        text-align: center;
+      }
+      p {
+        padding: 5px;
+        text-align: center;
+        margin: auto;
+      }
+    }
+  }
+  .product-button-container {
+    padding-top: 1rem;
+  }
+  button {
+    padding: 1em !important;
+    width: 100%;
+    background: $submit-btn-bg-color;
+    color: $submit-btn-color;
+    border: none;
+    font-family: Montserrat, sans-serif;
   }
 }
