--- a/styles.scss
+++ b/styles.scss
@@ -25,6 +25,7 @@ header {
   justify-content: space-between;
   width: calc(100%);
   background: white;
+  color: white;
   a {
     text-decoration: none;
     color: black;
@@ -140,6 +141,97 @@ header {
   }
 }
 
+.product-wrapper {
+  color: white;
+  display: grid;
+  grid-template-columns: auto;
+  section {
+    padding: 3em;
+    h1,
+    h2,
+    .read-btn {
+      text-transform: uppercase;
+      margin: 0;
+    }
+    h2 {
+      font-size: 1.4rem;
+    }
+    .read-btn {
+      text-decoration: none;
+      color: black;
+      font-weight: bold;
+      background: url("./public/static/assets/play-button.svg") no-repeat -8px;
+      padding-left: 1em;
+    }
+    .primary {
+      color: white;
+      padding: 1.5em 1.9em 1.5em calc(0.7em + 15px);
+      background-position: 10.7em;
+      background-size: 1em;
+      border: 1px solid white;
+      display: inline-block;
+      margin-top: 3em;
+    }
+    .secondary {
+      color: white;
+      padding: 1.5em 1.5em 1.5em calc(3em + 25px);
+      background-position: 3em;
+      background-size: 1em;
+      border: 1px solid white;
+      display: inline-block;
+      margin-top: 3em;
+    }
+    .clipper {
+      overflow: hidden;
+      b {
+        font-family: Garamond, sans-serif;
+      }
+    }
+  }
+  section.hero {
+    padding-top: 8em;
+    background: url("./public/static/assets/heroimagemobilehires1.jpeg") fixed;
+    background-size: cover;
+    p {
+      width: 60%;
+      font-size: 1.3rem;
+      margin-bottom: 0;
+    }
+    h1 {
+      font-size: 2.4rem;
+    }
+  }
+  section.sidebar,
+  section.subscribe {
+    font-size: 0.9rem;
+    line-height: 1.6em;
+  }
+  section.sidebar {
+    background: $primary-color;
+    .read-btn {
+      margin-top: 2em;
+      display: block;
+    }
+  }
+  section.subscribe {
+    color: black;
+    input {
+      width: calc(100% - 2em);
+      padding: 1em;
+      font-family: "Montserrat", sans-serif;
+      margin-bottom: 1em;
+    }
+    button {
+      width: 100%;
+      background: $submit-btn-bg-color;
+      color: $submit-btn-color;
+      padding: 1em;
+      border: none;
+      font-family: Montserrat, sans-serif;
+    }
+  }
+}
+
 @media only screen and (min-width: 768px) {
   html {
     font-size: 20px;
@@ -147,7 +239,6 @@ header {
 }
 @media only screen and (min-width: 1024px) {
   header {
-    background: none;
   }
   .wrapper {
     grid-template-columns: 70% auto;
@@ -171,6 +262,28 @@ header {
       padding-top: 5em;
     }
   }
+  .product-wrapper {
+    grid-template-columns: 80% auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+      "hero featured";
+    height: 100vh;
+
+    section.product-hero-wrapper {
+      display: grid;
+      padding-top: 60px;
+      padding-bottom: 0;
+      grid-area: hero;
+      overflow-y:auto;
+      .product-grid-container {
+        display: grid;
+        grid-area: hero;
+        grid-template-columns: auto auto auto;
+        grid-gap: 1.4rem;
+        overflow-y:auto;
+      }
+    }
+  }
 }
 @media only screen and (min-width: 1800px) {
   html {
@@ -179,6 +292,7 @@ header {
 }
 
 //Product Page
+
 section.product-hero-wrapper {
   color: black;
   padding-top: 8em;
@@ -223,4 +337,9 @@ section.product-hero-wrapper {
     border: none;
     font-family: Montserrat, sans-serif;
   }
+}
+section.sidebar-products {
+  background: #e9ebee;
+  border-left: black 1px solid;
+  color: black;
 }
